# analytics-and-databases

./: .gitignore  README.md  clickhouse_users.xml  docker-compose.yml  postgres.dockerfile  setup_clickhouse.py  setup_duckdb.py  setup_postgres.py
analytical-db-knockout/: .gitignore  Makefile  README.md  examples_parquet_import.py  import_nyc_taxi_batch.py  import_parquet_quickstart.sh  parquet_importer.py  postgres.dockerfile  pyproject.toml  pytest.ini  requirements.txt  schema_postgres.sql  schema_sqlite.sql  setup_pg_duckdb_manual.sh
analytical-db-knockout/benchmarks/: README.md  __init__.py  benchmark_results.py  benchmark_timing.py  conftest.py  pg_duckdb_results.py  queries.json  runner.py  test_clickhouse_queries.py  test_duckdb_queries.py  test_duckdb_vs_clickhouse.py  test_duckdb_vs_postgres.py  test_parquet_import.py  test_pg_duckdb_performance.py  test_pg_duckdb_setup.py  test_query_correctness.py  validate_clickhouse_queries.py
analytical-db-knockout/benchmarks/results/: IMPLEMENTATION_SUMMARY.md
analytical-db-knockout/blog/: BLOG_POST.md  comparison-duckdb-vs-ch.md  performance-comparison-postgres-sqlite-duckdb.md
analytical-db-knockout/docs/: ARCHITECTURE.md  PARQUET_IMPORT_GUIDE.md
analytical-db-knockout/docs/fixes/: CLICKHOUSE_FIXES.md  CLICKHOUSE_ROW_COUNT_COMPREHENSIVE_FIX.md  CLICKHOUSE_ROW_COUNT_FIXES.md  PARQUET_BATCH_IMPORT_SUMMARY.md
benchmark_results/: duckdb_vs_postgres_latest.json
duckdb-etl-with-multi-writer/: .gitignore  CONSOLIDATION_SUMMARY.md  Makefile  QUERY_OPTIMIZATION_GUIDE.md  README.md  data_registry.json  etl_config.py  (+4 more)
(+28 files in other folders)
